Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13727

top-level query timestamp reset at stored func/trigger internal statements

    XMLWordPrintable

Details

    Description

      http://buildbot.askmonty.org/buildbot/builders/kvm-fulltest2/builds/9482/steps/test_3/logs/stdio

      rpl.rpl_concurrency_error 'innodb,stmt'  w2 [ fail ]
              Test ended at 2017-09-05 12:47:50
       
      CURRENT_TEST: rpl.rpl_concurrency_error
      /mnt/buildbot/build/mariadb-10.3.2/client/mysqltest: Error on delete of '/mnt/buildbot/build/mariadb-10.3.2/mysql-test/var/2/tmp/_var_file_479b03f5-921f-11e7-81e7-525400123456.inc' (Errcode: 2 "No such file or directory")
      /mnt/buildbot/build/mariadb-10.3.2/client/mysqltest: Error on delete of '/mnt/buildbot/build/mariadb-10.3.2/mysql-test/var/2/tmp/_var_file_47ae05a4-921f-11e7-81e7-525400123456.inc' (Errcode: 2 "No such file or directory")
      mysqltest: In included file "./include/rpl_diff.inc": 
      included from /mnt/buildbot/build/mariadb-10.3.2/mysql-test/suite/rpl/t/rpl_concurrency_error.test at line 134:
      At line 113: command "diff_files" failed with error: 1  my_errno: 175  errno: -1
       
      The result from queries just before the failure was:
      < snip >
      master-bin.000001	#	Xid	#	#	COMMIT /* XID */
      master-bin.000001	#	Gtid	#	#	BEGIN GTID #-#-#
      master-bin.000001	#	Query	#	#	use `test`; UPDATE IGNORE t SET f = 'dark blue 1' WHERE f = 'red'
      master-bin.000001	#	Query	#	#	use `test`; INSERT INTO t VALUES (6 + (1 * 10),"brown")
      master-bin.000001	#	Xid	#	#	COMMIT /* XID */
      connection master;
      connection slave;
      include/rpl_diff.inc
      include/rpl_diff.inc
      --- /mnt/buildbot/build/mariadb-10.3.2/mysql-test/var/2/tmp/_rpl_diff_server-2.tmp	2017-09-05 12:47:50.274257071 +0300
      +++ /mnt/buildbot/build/mariadb-10.3.2/mysql-test/var/2/tmp/_rpl_diff_server-1.tmp	2017-09-05 12:47:50.250257073 +0300
      @@ -5,7 +5,7 @@
       2017-09-05 12:47:42	updated t: red -> dark blu
       2017-09-05 12:47:42	updated t: yellow 2 -> gray 2
       2017-09-05 12:47:44	brown
      -2017-09-05 12:47:44	updated t: gray 2 -> yellow 1
      +2017-09-05 12:47:45	updated t: gray 2 -> yellow 1
       2017-09-05 12:47:45	updated t: red -> magenta
       2017-09-05 12:47:47	brown
       2017-09-05 12:47:47	updated t: red -> dark blu
      

       
      2017-09-05 12:47:39 16 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE t SET f = 'yellow 2' WHERE i = 3
      2017-09-05 12:47:41 17 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE IGNORE t SET f = 'magenta 2' WHERE f = 'red'
      2017-09-05 12:47:41 17 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. UPDATE IGNORE is unsafe because the order in which rows are updated determines which (if any) rows are ignored. This order cannot be predicted and may differ on master and the slave Statement: UPDATE IGNORE t SET f = 'magenta 2' WHERE f = 'red'
      2017-09-05 12:47:42 16 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE t SET f = 'gray 2' WHERE i = 3
      2017-09-05 12:47:44 17 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE IGNORE t SET f = 'dark blue 2' WHERE f = 'red'
      2017-09-05 12:47:44 17 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. UPDATE IGNORE is unsafe because the order in which rows are updated determines which (if any) rows are ignored. This order cannot be predicted and may differ on master and the slave Statement: UPDATE IGNORE t SET f = 'dark blue 2' WHERE f = 'red'
      2017-09-05 12:47:45 16 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE t SET f = 'yellow 1' WHERE i = 3
      2017-09-05 12:47:47 17 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE IGNORE t SET f = 'magenta 1' WHERE f = 'red'
      2017-09-05 12:47:47 17 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. UPDATE IGNORE is unsafe because the order in which rows are updated determines which (if any) rows are ignored. This order cannot be predicted and may differ on master and the slave Statement: UPDATE IGNORE t SET f = 'magenta 1' WHERE f = 'red'
      2017-09-05 12:47:47 16 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE t SET f = 'gray 1' WHERE i = 3
      2017-09-05 12:47:49 17 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE IGNORE t SET f = 'dark blue 1' WHERE f = 'red'
      2017-09-05 12:47:49 17 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. UPDATE IGNORE is unsafe because the order in which rows are updated determines which (if any) rows are ignored. This order cannot be predicted and may differ on master and the slave Statement: UPDATE IGNORE t SET f = 'dark blue 1' WHERE f = 'red'
      2017-09-05 12:47:41 13 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE t SET f = 'yellow 2' WHERE i = 3
      2017-09-05 12:47:41 13 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE IGNORE t SET f = 'magenta 2' WHERE f = 'red'
      2017-09-05 12:47:41 13 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. UPDATE IGNORE is unsafe because the order in which rows are updated determines which (if any) rows are ignored. This order cannot be predicted and may differ on master and the slave Statement: UPDATE IGNORE t SET f = 'magenta 2' WHERE f = 'red'
      2017-09-05 12:47:44 13 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE t SET f = 'gray 2' WHERE i = 3
      2017-09-05 12:47:44 13 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE IGNORE t SET f = 'dark blue 2' WHERE f = 'red'
      2017-09-05 12:47:44 13 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. UPDATE IGNORE is unsafe because the order in which rows are updated determines which (if any) rows are ignored. This order cannot be predicted and may differ on master and the slave Statement: UPDATE IGNORE t SET f = 'dark blue 2' WHERE f = 'red'
      2017-09-05 12:47:47 13 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE t SET f = 'yellow 1' WHERE i = 3
      2017-09-05 12:47:47 13 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE IGNORE t SET f = 'magenta 1' WHERE f = 'red'
      2017-09-05 12:47:47 13 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. UPDATE IGNORE is unsafe because the order in which rows are updated determines which (if any) rows are ignored. This order cannot be predicted and may differ on master and the slave Statement: UPDATE IGNORE t SET f = 'magenta 1' WHERE f = 'red'
      2017-09-05 12:47:49 13 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE t SET f = 'gray 1' WHERE i = 3
      2017-09-05 12:47:49 13 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. Statement accesses nontransactional table as well as transactional or temporary table, and writes to any of them Statement: UPDATE IGNORE t SET f = 'dark blue 1' WHERE f = 'red'
      2017-09-05 12:47:49 13 [Warning] Unsafe statement written to the binary log using statement format since BINLOG_FORMAT = STATEMENT. UPDATE IGNORE is unsafe because the order in which rows are updated determines which (if any) rows are ignored. This order cannot be predicted and may differ on master and the slave Statement: UPDATE IGNORE t SET f = 'dark blue 1' WHERE f = 'red'
      

      Attachments

        Activity

          People

            monty Michael Widenius
            alice Alice Sherepa
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 7d 7.25h
                7d 7.25h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.